--- a/app/src/main/res/values/colors_mobile.xml
+++ b/app/src/main/res/values/colors_mobile.xml
@@ -1,14 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="primary">@color/md_grey_900</color>
-    <color name="primary_dark">@color/md_grey_900</color>
+    <color name="primary">@color/md_blue_A400</color>
+    <color name="primary_dark">@color/md_blue_800</color>
     <color name="accent">@color/md_blue_A400</color>
 
-    <color name="background">@color/md_grey_900</color>
-    <color name="border">@color/md_grey_800</color>
-    <color name="primaryText">@color/md_grey_100</color>
-    <color name="secondaryText">@color/md_grey_200</color>
-    <color name="hintText">@color/md_grey_400</color>
+    <color name="background">@color/md_grey_50</color>
+    <color name="border">@color/md_grey_200</color>
+    <color name="primaryText">@color/md_grey_900</color>
+    <color name="secondaryText">@color/md_grey_800</color>
+    <color name="hintText">@color/md_grey_700</color>
 
     <!-- action bar-->
     <color name="actionbar_color">@color/primary</color>
