--- a/app/src/main/res/layout/fragment_add_eta.xml
+++ b/app/src/main/res/layout/fragment_add_eta.xml
@@ -4,6 +4,7 @@
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:clipToPadding="false"
     android:orientation="vertical"
     android:paddingTop="12dp"
