--- a/app/src/main/res/layout/item_add_eta_company.xml
+++ b/app/src/main/res/layout/item_add_eta_company.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
     android:baselineAligned="false"
     android:gravity="center_vertical"
     android:orientation="horizontal"
