--- a/app/src/main/res/layout/fragment_settings_eta_listing.xml
+++ b/app/src/main/res/layout/fragment_settings_eta_listing.xml
@@ -8,4 +8,4 @@
     android:orientation="vertical"
     android:scrollbars="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:listitem="@layout/card_eta_compact" />
+    tools:listitem="@layout/content_eta_compact" />
