--- a/app/src/main/res/layout/content_eta_standard.xml
+++ b/app/src/main/res/layout/content_eta_standard.xml
@@ -17,16 +17,8 @@
         app:layout_constraintTop_toTopOf="@id/lineBgView">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|end"
-            android:paddingStart="6dp"
-            android:paddingEnd="0dp"
-            android:text="@string/text_eta_destination_to"
-            android:textSize="18sp" />
-
-        <TextView
             android:id="@+id/routeDirectionTv"
+            android:textColor="@color/textStationColor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
