--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,41 @@
 <resources>
+    <!-- mobile -->
+    <color name="primary">@color/md_blue_A400</color>
+    <color name="primary_dark">@color/md_blue_800</color>
+    <color name="accent">@color/md_blue_A400</color>
 
+    <color name="background">@color/md_grey_50</color>
+    <color name="border">@color/md_grey_200</color>
+    <color name="primaryText">@color/md_grey_900</color>
+    <color name="secondaryText">@color/md_grey_800</color>
+    <color name="hintText">@color/md_grey_700</color>
+
+    <!-- action bar-->
+    <color name="actionbar_color">@color/primary</color>
+    <color name="actionbar_title_text">@color/white</color>
+
+    <color name="mainButton">@color/md_blue_900</color>
+    <color name="greenButton">@color/md_green_900</color>
+    <color name="greenButtonControlHighlight">@color/md_green_600</color>
+    <color name="textStationColor">@color/white</color>
+
+    <!-- leanback -->
+    <color name="black_trans_88">#88000000</color>
+    <color name="dark_green">#FF3F51B5</color>
+    <color name="fluorescent_orange">#2196F3</color>
+    <color name="fluorescent_orange_trans">#332196F3</color>
+    <color name="bg_mapview_title">#D82196F3</color>
+
+    <color name="settings_card_background">#0277BD</color>
+    <color name="settings_card_background_focussed">#01579B</color>
+
+    <!-- common -->
     <color name="white">@color/md_white_1000</color>
     <color name="brand_color_kmb">#D32F2F</color>
     <color name="brand_color_ctb">#FBC02D</color>
     <color name="brand_color_nwfb">#7E57C2</color>
     <color name="brand_color_gmb">#2E7D32</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
-
 
     <color name="transparent">#00000000</color>
     <!--reds-->
