--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="ThemeOverlay.MyApp.ActionBar" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:textColorPrimary">@color/actionbar_title_text</item>
     </style>
@@ -8,6 +9,7 @@
         <item name="android:background">@color/actionbar_color</item>
         <item name="android:elevation">4dp</item>
     </style>
+
     <style name="LeftMenuStyle">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
@@ -98,5 +100,12 @@
         <item name="colorAccent">@color/transparent</item>
         <item name="colorButtonNormal">@color/transparent</item>
         <item name="colorControlHighlight">@color/secondaryText</item>
+    </style>
+
+    <style name="Eta.Card.Mobile" parent="">
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
     </style>
 </resources>
