--- a/app/src/main/res/layout/fragment_add_eta.xml
+++ b/app/src/main/res/layout/fragment_add_eta.xml
@@ -7,44 +7,6 @@
     android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/searchCl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        android:paddingStart="12dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="12dp"
-        android:paddingBottom="8dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/recyclerView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
-
-        <EditText
-            android:id="@+id/searchEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_search_background"
-            android:drawableStart="@drawable/ic_search_24"
-            android:drawableEnd="@drawable/ic_close_24"
-            android:drawablePadding="5dp"
-            android:hint="@string/placeholder_search_route"
-            android:imeOptions="actionSearch"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="8dp"
-            android:singleLine="true"
-            android:textColor="?android:attr/textColorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/hintCl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,7 +18,7 @@
         tools:background="@color/brand_color_kmb"
         tools:visibility="visible">
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/hintTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,6 +41,6 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/hintCl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchCl"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_add_eta_company" />
 </androidx.constraintlayout.widget.ConstraintLayout>
