--- a/app/src/main/res/layout/item_add_eta_stop.xml
+++ b/app/src/main/res/layout/item_add_eta_stop.xml
@@ -64,7 +64,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/stopSeqTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="01" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/stopNameTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
