--- a/app/src/main/res/layout/content_eta_standard.xml
+++ b/app/src/main/res/layout/content_eta_standard.xml
@@ -18,7 +18,6 @@
 
         <TextView
             android:id="@+id/routeDirectionTv"
-            android:textColor="@color/textStationColor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
@@ -26,6 +25,7 @@
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
             android:text="@string/demo_card_route_desc"
+            android:textColor="@color/eta_card_line_text_mobile"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -191,7 +191,7 @@
             app:layout_constraintStart_toEndOf="@id/stopNameTv"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/stopNameTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
