--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="horizontal">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/tabTitleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
