--- a/app/src/main/res/layout/fragment_view_pager_container.xml
+++ b/app/src/main/res/layout/fragment_view_pager_container.xml
@@ -32,11 +32,9 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/adLayout"
-        app:tabGravity="fill"
-        app:tabMode="fixed" />
+        app:layout_constraintTop_toBottomOf="@id/adLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
