--- a/app/src/main/res/layout/item_add_eta_route.xml
+++ b/app/src/main/res/layout/item_add_eta_route.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/routeNumberTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
             app:layout_constraintStart_toEndOf="@id/routeNumberLl"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/routeSpTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
                 app:layout_constraintTop_toBottomOf="@id/routeDirectionTv"
                 tools:text="@string/text_add_eta_destination_sp_mobile" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/routeDirectionTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
