--- a/app/src/main/res/layout/item_eta_standard.xml
+++ b/app/src/main/res/layout/item_eta_standard.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Eta.Card.Mobile"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/eta_card_background">
 
     <include
         android:id="@+id/content"
