--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="square_image_card_width">128dp</dimen>
     <dimen name="square_image_card_height">128dp</dimen>
+
+    <dimen name="eta_compact_stop_name">14sp</dimen>
 </resources>
