--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,7 @@
     <style name="Eta.Card.RouteNumber" parent="">
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">4dp</item>
-        <item name="android:textSize">36sp</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:gravity">center_vertical</item>
@@ -72,6 +72,7 @@
 
     <style name="Eta.Card.Unit.Text" parent="">
         <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginStart">2dp</item>
     </style>
 
     <style name="Widget.Leanback.GuidanceIconStyle.IconWithPadding" parent="Widget.Leanback.GuidanceIconStyle">
@@ -107,5 +108,9 @@
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_marginTop">4dp</item>
+    </style>
+
+    <style name="EtaAddTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">4dp</item>
     </style>
 </resources>
