--- a/app/src/main/res/menu/main_bottom_bar.xml
+++ b/app/src/main/res/menu/main_bottom_bar.xml
@@ -12,4 +12,10 @@
         android:icon="@drawable/ic_settings_24"
         android:title="@string/main_tab_title_2"
         app:exb_color="@color/md_blue_400" />
+
+    <item
+        android:id="@+id/stopMap"
+        android:icon="@drawable/ic_map_24"
+        android:title="@string/main_tab_title_3"
+        app:exb_color="@color/md_blue_400" />
 </menu>
