feat: add bottom sheet to map

--- a/app/src/main/res/layout/fragment_stop_map.xml
+++ b/app/src/main/res/layout/fragment_stop_map.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,63 +15,11 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg_stop_map_bottom_sheet"
-        android:elevation="1dp"
-        app:behavior_hideable="false"
-        app:layout_behavior="@string/bottom_sheet_behavior">
+    <include
+        android:id="@+id/layout_stop_list"
+        layout="@layout/content_bottom_sheet_stop_list" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/stopInfoCl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/recyclerView"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/stopNameTv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="12dp"
-                    android:textSize="32sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/viewToggle"
-                    tools:text="@string/demo_card_stop_name" />
-
-                <View
-                    android:id="@+id/viewToggle"
-                    android:layout_width="100dp"
-                    android:layout_height="8dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/view_bottom_sheet_toggle"
-                    app:layout_constraintBottom_toTopOf="@id/stopNameTv"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/stopInfoCl"
-                tools:listitem="@layout/item_stop_map_route" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
+    <include
+        android:id="@+id/layout_route_list"
+        layout="@layout/content_bottom_sheet_route_list" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
