--- a/app/src/main/res/layout/item_stop_map_route.xml
+++ b/app/src/main/res/layout/item_stop_map_route.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <View
         android:id="@+id/routeCompanyColor"
@@ -27,7 +29,7 @@
 
         <LinearLayout
             android:id="@+id/routeNumberLl"
-            android:layout_width="60dp"
+            android:layout_width="68dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,9 +44,9 @@
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_number"
-                android:textSize="32sp"
+                android:textSize="28sp"
                 android:textStyle="bold"
-                app:autoSizeMaxTextSize="32sp"
+                app:autoSizeMaxTextSize="28sp"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
 
